--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -20,7 +20,8 @@
    "outputs": [],
    "source": [
     "from scripts.load_data import load_data\n",
-    "from scripts.preprocessing_and_EDA import *"
+    "from scripts.preprocessing_and_EDA import *\n",
+    "from scripts.modeling_and_evaluation import *"
    ]
   },
   {
@@ -296,6 +297,132 @@
    ],
    "source": [
     "EDA(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pc\\Desktop\\10_Academy\\Week-10\\kaim-week-10\\.myvenv10\\lib\\site-packages\\statsmodels\\tsa\\statespace\\sarimax.py:966: UserWarning: Non-stationary starting autoregressive parameters found. Using zeros as starting parameters.\n",
+      "  warn('Non-stationary starting autoregressive parameters'\n",
+      "c:\\Users\\pc\\Desktop\\10_Academy\\Week-10\\kaim-week-10\\.myvenv10\\lib\\site-packages\\statsmodels\\tsa\\statespace\\sarimax.py:978: UserWarning: Non-invertible starting MA parameters found. Using zeros as starting parameters.\n",
+      "  warn('Non-invertible starting MA parameters found.'\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['Price_diff'] = df['Price'].diff()\n",
+    "# df['Price_diff'].isnull().sum()\n",
+    "if check_stationarity(df['Price_diff']):\n",
+    "    # \n",
+    "    arima_model = build_arima_model(df)\n",
+    "    # Econometric Model\n",
+    "    linear_model = build_linear_regression_model(df)\n",
+    "    \n",
+    "    # Machine Learning Model\n",
+    "    rf_model = build_random_forest_model(df)\n",
+    "else:\n",
+    "    print(\"Time series is not stationary.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = define_models(arima_model, linear_model, rf_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'OLSResults' object has no attribute 'forecast'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m metrics_df \u001b[38;5;241m=\u001b[39m \u001b[43mcompare_models\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mforecast_steps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(metrics_df)\n",
+      "File \u001b[1;32mc:\\Users\\pc\\Desktop\\10_Academy\\Week-10\\kaim-week-10\\scripts\\modeling_and_evaluation.py:125\u001b[0m, in \u001b[0;36mcompare_models\u001b[1;34m(models, df, forecast_steps)\u001b[0m\n\u001b[0;32m    122\u001b[0m results \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m    124\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name, model \u001b[38;5;129;01min\u001b[39;00m models\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m--> 125\u001b[0m     metrics \u001b[38;5;241m=\u001b[39m \u001b[43mevaluate_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mforecast_steps\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    126\u001b[0m     results[name] \u001b[38;5;241m=\u001b[39m metrics\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m pd\u001b[38;5;241m.\u001b[39mDataFrame(results)\u001b[38;5;241m.\u001b[39mT\n",
+      "File \u001b[1;32mc:\\Users\\pc\\Desktop\\10_Academy\\Week-10\\kaim-week-10\\scripts\\modeling_and_evaluation.py:143\u001b[0m, in \u001b[0;36mevaluate_model\u001b[1;34m(model, df, forecast_steps)\u001b[0m\n\u001b[0;32m    131\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    132\u001b[0m \u001b[38;5;124;03mEvaluate the ARIMA model's performance using RMSE, MAE, and R-squared.\u001b[39;00m\n\u001b[0;32m    133\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    140\u001b[0m \u001b[38;5;124;03m    dict: Dictionary containing RMSE, MAE, and R-squared.\u001b[39;00m\n\u001b[0;32m    141\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    142\u001b[0m \u001b[38;5;66;03m# Generate predictions\u001b[39;00m\n\u001b[1;32m--> 143\u001b[0m predictions \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforecast\u001b[49m(steps\u001b[38;5;241m=\u001b[39mforecast_steps)\n\u001b[0;32m    145\u001b[0m \u001b[38;5;66;03m# Aligning predictions with actual values\u001b[39;00m\n\u001b[0;32m    146\u001b[0m actual_values \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrice\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m-\u001b[39mforecast_steps:]  \u001b[38;5;66;03m# Last 'n' actual values\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\pc\\Desktop\\10_Academy\\Week-10\\kaim-week-10\\.myvenv10\\lib\\site-packages\\statsmodels\\base\\wrapper.py:34\u001b[0m, in \u001b[0;36mResultsWrapper.__getattribute__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m---> 34\u001b[0m obj \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mresults\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     35\u001b[0m data \u001b[38;5;241m=\u001b[39m results\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdata\n\u001b[0;32m     36\u001b[0m how \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_wrap_attrs\u001b[38;5;241m.\u001b[39mget(attr)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'OLSResults' object has no attribute 'forecast'"
+     ]
+    }
+   ],
+   "source": [
+    "metrics_df = compare_models(models, df, forecast_steps=30)\n",
+    "print(metrics_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.518241670517899\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate model\n",
+    "rmse = evaluate_model(arima_model, df)\n",
+    "print(rmse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               SARIMAX Results                                \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  Price   No. Observations:                 9011\n",
+      "Model:                 ARIMA(1, 1, 1)   Log Likelihood              -20409.089\n",
+      "Date:                Thu, 20 Feb 2025   AIC                          40824.177\n",
+      "Time:                        15:50:18   BIC                          40845.496\n",
+      "Sample:                             0   HQIC                         40831.431\n",
+      "                               - 9011                                         \n",
+      "Covariance Type:                  opg                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "ar.L1          0.6894      0.003    270.555      0.000       0.684       0.694\n",
+      "ma.L1         -0.8338      0.002   -417.030      0.000      -0.838      -0.830\n",
+      "sigma2         5.4326      0.006    895.432      0.000       5.421       5.445\n",
+      "===================================================================================\n",
+      "Ljung-Box (L1) (Q):                  64.78   Jarque-Bera (JB):         447550297.22\n",
+      "Prob(Q):                              0.00   Prob(JB):                         0.00\n",
+      "Heteroskedasticity (H):              11.40   Skew:                            -1.95\n",
+      "Prob(H) (two-sided):                  0.00   Kurtosis:                      1094.85\n",
+      "===================================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate insights\n",
+    "insights = generate_insights(arima_model)\n",
+    "print(insights)"
    ]
   }
  ],
