--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -345,17 +345,13 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'OLSResults' object has no attribute 'forecast'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m metrics_df \u001b[38;5;241m=\u001b[39m \u001b[43mcompare_models\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mforecast_steps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(metrics_df)\n",
-      "File \u001b[1;32mc:\\Users\\pc\\Desktop\\10_Academy\\Week-10\\kaim-week-10\\scripts\\modeling_and_evaluation.py:125\u001b[0m, in \u001b[0;36mcompare_models\u001b[1;34m(models, df, forecast_steps)\u001b[0m\n\u001b[0;32m    122\u001b[0m results \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m    124\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name, model \u001b[38;5;129;01min\u001b[39;00m models\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m--> 125\u001b[0m     metrics \u001b[38;5;241m=\u001b[39m \u001b[43mevaluate_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mforecast_steps\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    126\u001b[0m     results[name] \u001b[38;5;241m=\u001b[39m metrics\n\u001b[0;32m    128\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m pd\u001b[38;5;241m.\u001b[39mDataFrame(results)\u001b[38;5;241m.\u001b[39mT\n",
-      "File \u001b[1;32mc:\\Users\\pc\\Desktop\\10_Academy\\Week-10\\kaim-week-10\\scripts\\modeling_and_evaluation.py:143\u001b[0m, in \u001b[0;36mevaluate_model\u001b[1;34m(model, df, forecast_steps)\u001b[0m\n\u001b[0;32m    131\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    132\u001b[0m \u001b[38;5;124;03mEvaluate the ARIMA model's performance using RMSE, MAE, and R-squared.\u001b[39;00m\n\u001b[0;32m    133\u001b[0m \u001b[38;5;124;03m\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    140\u001b[0m \u001b[38;5;124;03m    dict: Dictionary containing RMSE, MAE, and R-squared.\u001b[39;00m\n\u001b[0;32m    141\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    142\u001b[0m \u001b[38;5;66;03m# Generate predictions\u001b[39;00m\n\u001b[1;32m--> 143\u001b[0m predictions \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforecast\u001b[49m(steps\u001b[38;5;241m=\u001b[39mforecast_steps)\n\u001b[0;32m    145\u001b[0m \u001b[38;5;66;03m# Aligning predictions with actual values\u001b[39;00m\n\u001b[0;32m    146\u001b[0m actual_values \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrice\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m-\u001b[39mforecast_steps:]  \u001b[38;5;66;03m# Last 'n' actual values\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\pc\\Desktop\\10_Academy\\Week-10\\kaim-week-10\\.myvenv10\\lib\\site-packages\\statsmodels\\base\\wrapper.py:34\u001b[0m, in \u001b[0;36mResultsWrapper.__getattribute__\u001b[1;34m(self, attr)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m:\n\u001b[0;32m     32\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m---> 34\u001b[0m obj \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mresults\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mattr\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     35\u001b[0m data \u001b[38;5;241m=\u001b[39m results\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mdata\n\u001b[0;32m     36\u001b[0m how \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_wrap_attrs\u001b[38;5;241m.\u001b[39mget(attr)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'OLSResults' object has no attribute 'forecast'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                       RMSE       MAE  R-squared\n",
+      "ARIMA              2.518242  2.006086  -0.015670\n",
+      "Linear Regression  1.966641  1.647242   0.380547\n",
+      "Random Forest      1.378392  0.905970   0.695699\n"
      ]
     }
    ],
@@ -373,19 +369,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.518241670517899\n"
+      "Best performing model: Random Forest\n"
      ]
     }
    ],
    "source": [
-    "# Evaluate model\n",
-    "rmse = evaluate_model(arima_model, df)\n",
-    "print(rmse)"
+    "# Identify the best-performing model based on RMSE\n",
+    "best_model = metrics_df['RMSE'].idxmin()\n",
+    "print(f\"Best performing model: {best_model}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +393,7 @@
       "Dep. Variable:                  Price   No. Observations:                 9011\n",
       "Model:                 ARIMA(1, 1, 1)   Log Likelihood              -20409.089\n",
       "Date:                Thu, 20 Feb 2025   AIC                          40824.177\n",
-      "Time:                        15:50:18   BIC                          40845.496\n",
+      "Time:                        18:45:54   BIC                          40845.496\n",
       "Sample:                             0   HQIC                         40831.431\n",
       "                               - 9011                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -420,8 +416,54 @@
     }
    ],
    "source": [
-    "# Generate insights\n",
+    "# Generate insights for arima_model\n",
     "insights = generate_insights(arima_model)\n",
+    "print(insights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                 OLS Regression Results                                \n",
+      "=======================================================================================\n",
+      "Dep. Variable:                  Price   R-squared (uncentered):                   0.998\n",
+      "Model:                            OLS   Adj. R-squared (uncentered):              0.998\n",
+      "Method:                 Least Squares   F-statistic:                          2.720e+06\n",
+      "Date:                Thu, 20 Feb 2025   Prob (F-statistic):                        0.00\n",
+      "Time:                        18:47:22   Log-Likelihood:                         -20574.\n",
+      "No. Observations:                9010   AIC:                                  4.115e+04\n",
+      "Df Residuals:                    9008   BIC:                                  4.117e+04\n",
+      "Df Model:                           2                                                  \n",
+      "Covariance Type:            nonrobust                                                  \n",
+      "================================================================================\n",
+      "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------\n",
+      "Date_num      2.251e-10   5.18e-11      4.348      0.000    1.24e-10    3.27e-10\n",
+      "Lagged_Price     0.9953      0.001    971.836      0.000       0.993       0.997\n",
+      "==============================================================================\n",
+      "Omnibus:                     5207.202   Durbin-Watson:                   2.023\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):        569146720.201\n",
+      "Skew:                          -0.493   Prob(JB):                         0.00\n",
+      "Kurtosis:                    1234.275   Cond. No.                     4.73e+07\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
+      "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[3] The condition number is large, 4.73e+07. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate insights for linear model\n",
+    "insights = generate_insights(linear_model)\n",
     "print(insights)"
    ]
   }
